--- a/.github/workflows/aws-ecs-deploy.yml
+++ b/.github/workflows/aws-ecs-deploy.yml
@@ -35,7 +35,7 @@ env:
   ECR_REPOSITORY: edp-ecr-repo           # set this to your Amazon ECR repository name
   ECS_SERVICE: edp-svc                 # set this to your Amazon ECS service name
   ECS_CLUSTER: dev                 # set this to your Amazon ECS cluster name
-  ECS_TASK_DEFINITION: "tasks/edp-task.json" # set this to the path to your Amazon ECS task definition
+  ECS_TASK_DEFINITION: "./tasks/edp-task.json" # set this to the path to your Amazon ECS task definition
                                                # file, e.g. .aws/task-definition.json
   CONTAINER_NAME: people-picker           # set this to the name of the container in the
                                                # containerDefinitions section of your task definition
