--- a/.github/workflows/aws-ecs-deploy.yml
+++ b/.github/workflows/aws-ecs-deploy.yml
@@ -26,9 +26,11 @@
 
 name: Deploy to Amazon ECS
 
+# set to manual to prevent this workflow from running on every push
 on:
-  push:
-    branches: [ "main" ]
+  workflow_dispatch:
+#   push:
+#     branches: [ "main" ]
 
 env:
   AWS_REGION: us-east-2                         # set this to your preferred AWS region, e.g. us-west-1
