--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongodb": "^6.3.0"
   },
   "type": "module",
   "name": "people-picker",
   "version": "0.0.1",
   "description": "Picks a random person from a list of people",
   "main": "main.js",
-  "devDependencies": {},
   "scripts": {
     "start": "node --watch main.js"
   },
