--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "start": "node --watch main.js"
   },
   "author": "The EDP program cohort",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "react-router-dom": "^6.22.0"
+  }
 }
